--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -30,7 +30,7 @@ jobs:
         uses: jamessingleton/is-organization-member@78ce597bc916e3d0149e459575aaf6e4885dddc3
         with:
           organization: cloudquery
-          username: ${{ github.event.issue.user.login }}
+          username: ${{ github.actor }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
   lint_doc:
