--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -10,16 +10,16 @@ on:
       - main
 
 jobs:
-  ok_to_test:
+  manually_approved:
     runs-on: ubuntu-latest
     outputs:
-      status: ${{ steps.is_ok_to_test.outputs.result }}
+      status: ${{ steps.manually_approved.outputs.result }}
     steps:
       - name: Check if ok to test
-        id: is_ok_to_test
+        id: manually_approved
         run: |
-          ok_to_test=${{ github.event_name == 'repository_dispatch' && github.event.client_payload.slash_command.sha != '' && contains(github.event.client_payload.pull_request.head.sha, github.event.client_payload.slash_command.sha) }}
-          echo ::set-output name=result::"$ok_to_test"
+          manually_approved=${{ github.event_name == 'repository_dispatch' && github.event.client_payload.slash_command.sha != '' && contains(github.event.client_payload.pull_request.head.sha, github.event.client_payload.slash_command.sha) }}
+          echo ::set-output name=result::"$manually_approved"
   is_organization_member:
     runs-on: ubuntu-latest
     outputs:
@@ -33,9 +33,21 @@ jobs:
           username: ${{ github.actor }}
           token: ${{ secrets.GH_PAT }}
 
+  # This is here so we can enforce branch protection required status check
+  ok_to_test:
+    needs: [is_organization_member, manually_approved]
+    runs-on: ubuntu-latest
+    if: needs.is_organization_member.outputs.status == 'true' || needs.manually_approved.outputs.status == 'true'
+    outputs:
+      status: ${{ steps.ok_to_test.outputs.result }}
+    steps:
+      - name: Check if ok to test
+        id: ok_to_test
+        run: |
+          echo ::set-output name=result::"true"
+
   lint_doc:
-    needs: [is_organization_member, ok_to_test]
-    if: needs.is_organization_member.outputs.status == 'true' || needs.ok_to_test.outputs.status == 'true'
+    needs: [ok_to_test]
     name: Lint Provider Doc
     runs-on: ubuntu-latest
     steps:
