--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,3 +1,5 @@
 {
-  extends: ["github>clouduqery//.github/renoate-go-default.json5"],
+  extends: [
+    "github>clouduqery/repo-automation-playground//.github/renoate-go-default.json5",
+  ],
 }
