--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -19,4 +19,4 @@ jobs:
         uses: renovatebot/github-action@v32.37.2
         with:
           configurationFile: .github/renovate.json5
-          token: ${{ secrets.GH_CQ_BOT }}
+          token: ${{ secrets.RENOVATE_TOKEN }}
